--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 currency.default.id=R01235
 currency.api.url=http://www.cbr.ru/scripts/XML_dynamic.asp
-spring.datasource.url=jdbc:h2:mem:jpadb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=mypass
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://db:5432/
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jackson.serialization.indent_output=true
 spring.application.name=currency-service
 eureka.instance.appname=currency-service
