--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 version: '3.5'
 
 services:
+  db:
+    image: postgres
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
   eureka:
     image: pdris-homeworks-2021/eureka:latest
     ports:
@@ -11,12 +16,14 @@ services:
       - 8081:8080
     depends_on:
       - eureka
+      - db
   weather-service:
     image: pdris-homeworks-2021/weather-service:latest
     ports:
       - 8082:8080
     depends_on:
       - eureka
+      - db
   prediction-service:
     image: pdris-homeworks-2021/prediction-service:latest
     ports:
