--- a/weather-service/src/main/resources/application.properties
+++ b/weather-service/src/main/resources/application.properties
@@ -2,11 +2,13 @@ weather.api.key=e197d371f7594d3fb07142422202810
 weather.api.url=http://api.weatherapi.com/v1/history.json
 weather.api.days.limit=7
 weather.default.city=Moscow
-spring.datasource.url=jdbc:h2:mem:jpadb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=mypass
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://db:5432/
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jackson.serialization.indent_output=true
 spring.application.name=weather-service
 eureka.instance.appname=weather-service
