--- a/weather-service/src/main/resources/application-test.properties
+++ b/weather-service/src/main/resources/application-test.properties
@@ -1,6 +1,15 @@
+# Disable eureka
 eureka.client.enabled=false
+# Disable flyway, not work with H2 properly
+spring.flyway.enabled=false
+# DataSource
 spring.datasource.url=jdbc:h2:mem:jpadb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=mypass
+# Change to default schema
+spring.datasource.hikari.schema=PUBLIC
+spring.jpa.database=H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Enable Hibernate schema generation
+spring.jpa.hibernate.ddl-auto=create-drop
