--- a/weather-service/src/main/resources/application.properties
+++ b/weather-service/src/main/resources/application.properties
@@ -1,16 +1,28 @@
+# Weather API
 weather.api.key=e197d371f7594d3fb07142422202810
 weather.api.url=http://api.weatherapi.com/v1/history.json
 weather.api.days.limit=7
 weather.default.city=Moscow
+# Eureka
+spring.application.name=weather_service
+eureka.instance.appname=${spring.application.name}
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://eureka:8761/eureka
+# DataSource
 spring.datasource.url=jdbc:postgresql://db:5432/
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+# DB schema to use
+spring.datasource.hikari.schema=${spring.application.name}
+# Disable Hibernate schema generation/application
+spring.jpa.hibernate.ddl-auto=none
+# For pretty output
 spring.jackson.serialization.indent_output=true
-spring.application.name=weather-service
-eureka.instance.appname=weather-service
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://eureka:8761/eureka
+# Flyway
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.schemas=${spring.application.name}
