--- a/prediction-service/src/main/resources/application.properties
+++ b/prediction-service/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 weather.api.days.limit=7
-weather.service.name=weather-service
-currency.service.name=currency-service
+# For pretty output
 spring.jackson.serialization.indent_output=true
-spring.application.name=prediction-service
-eureka.instance.appname=prediction-service
+# Eureka
+spring.application.name=prediction_service
+eureka.instance.appname=${spring.application.name}
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://eureka:8761/eureka
+# Services name for eureka
+weather.service.name=weather_service
+currency.service.name=currency_service
