Change hostname to ip when register in eureka to work with kube

--- a/weather-service/src/main/resources/application.properties
+++ b/weather-service/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.application.name=weather_service
 eureka.instance.appname=${spring.application.name}
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://eureka:8761/eureka
+eureka.instance.preferIpAddress=true
 # DataSource
 spring.datasource.url=jdbc:postgresql://db:5432/
 spring.datasource.driverClassName=org.postgresql.Driver
