--- a/prediction-service/src/main/resources/application.properties
+++ b/prediction-service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.application.name=prediction_service
 eureka.instance.appname=${spring.application.name}
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://eureka:8761/eureka
+eureka.instance.preferIpAddress=true
 # Services name for eureka
 weather.service.name=weather_service
 currency.service.name=currency_service
