Add monitoring system

--- a/prediction-service/src/main/resources/application.properties
+++ b/prediction-service/src/main/resources/application.properties
@@ -9,3 +9,5 @@ eureka.client.service-url.defaultZone=http://eureka:8761/eureka
 # Services name for eureka
 weather.service.name=weather_service
 currency.service.name=currency_service
+# Actuator
+management.endpoints.web.exposure.include=*
