--- a/weather-service/src/main/resources/application.properties
+++ b/weather-service/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.flyway.user=${spring.datasource.username}
 spring.flyway.password=${spring.datasource.password}
 spring.flyway.url=${spring.datasource.url}
 spring.flyway.schemas=${spring.application.name}
+# Actuator
+management.endpoints.web.exposure.include=*
