--- a/weather-service/src/main/resources/application.properties
+++ b/weather-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ weather.api.key=e197d371f7594d3fb07142422202810
 weather.api.url=http://api.weatherapi.com/v1/history.json
 weather.api.days.limit=7
 weather.default.city=Moscow
-spring.datasource.url=jdbc:postgresql://db:5432/
+spring.datasource.url=jdbc:postgresql://${DB_URL}:${DB_PORT}/
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
