--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 currency.default.id=R01235
 currency.api.url=http://www.cbr.ru/scripts/XML_dynamic.asp
-spring.datasource.url=jdbc:postgresql://db:5432/
+spring.datasource.url=jdbc:postgresql://${DB_URL}:${DB_PORT}/
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
